kubernetes/apps/tools/speedtest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: web
  selector:
    app: speedtest
