kubernetes/apps/tools/speedtest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: tools
spec:
  rules:
    - host: speedtest.brzrkr.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest
                port:
                  number: 80
